--- a/06-frontend/03-bootstrap/index.html
+++ b/06-frontend/03-bootstrap/index.html
@@ -6,11 +6,21 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- metadata to tell the browser what character set will be used on the page -->
     <meta charset="utf-8">
     <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.js "></script>
     <link href=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css " rel="stylesheet">
 
-    <!-- Supports proper responsive (screen size) behavior -->
+    <!-- 
+        Supports proper responsive (screen size) behavior
+
+        Basically, mobile browsers are told to render the web page at a 
+        width that matches the device's screen width and at a 100% zoom 
+        level, ensuring a consistent and readable layout across
+        different devices.
+
+        Check it out: https://www.w3schools.com/css/css_rwd_viewport.asp
+     -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
   </head>
