Update example with external script for fouc control

--- a/06-frontend/04-javascript/03-local-storage/theme.html
+++ b/06-frontend/04-javascript/03-local-storage/theme.html
@@ -6,18 +6,8 @@
     <title>Local Storage Theme</title>
     <link rel="stylesheet" href="css/style.css">
 
-    <!-- inline JavaScript to help avoid FOUC -->
-    <script>
-        const savedTheme = localStorage.getItem('userThemePreference');
-        /* 
-            Apply the saved theme class directly to the HTML tag as soon as possible.
-            We can do this becaues the HTML tag was "seen" by the browser's HTML parser
-            already. See it up there? ----^
-            
-            This gives us the background color for the entire viewport (browser window).
-        */
-        document.documentElement.className = savedTheme ? `theme-${savedTheme}` : 'theme-default';
-    </script>
+    <!-- JavaScript to help avoid FOUC -->
+    <script src="js/fouc.js"></script>
 </head>
 <body>
     <div class="container">
